--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+# Mac
+.DS_Store
+
 # Xcode
 #
-build/
+build/*
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -23,7 +26,7 @@ DerivedData
 # you should judge for yourself, the pros and cons are mentioned at:
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
-# Pods/
+Pods/*
 
 # Carthage
 #
